k8s/03-databases.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cafe-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cafe-db
  template:
    metadata:
      labels:
        app: cafe-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: cafe-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: cafe-db-storage
          persistentVolumeClaim:
            claimName: cafe-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cafe-db
spec:
  ports:
    - port: 3306
  selector:
    app: cafe-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: menu-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: menu-db
  template:
    metadata:
      labels:
        app: menu-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: menu-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: menu-db-storage
          persistentVolumeClaim:
            claimName: menu-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: menu-db
spec:
  ports:
    - port: 3306
  selector:
    app: menu-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: desk-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: desk-db
  template:
    metadata:
      labels:
        app: desk-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: desk-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: desk-db-storage
          persistentVolumeClaim:
            claimName: desk-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: desk-db
spec:
  ports:
    - port: 3306
  selector:
    app: desk-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-db
  template:
    metadata:
      labels:
        app: order-db
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          command: ["mysqld", "--default-authentication-plugin=mysql_native_password"]
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: order-db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: order-db-storage
          persistentVolumeClaim:
            claimName: order-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: order-db
spec:
  ports:
    - port: 3306
  selector:
    app: order-db
