k8s/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-app
                port:
                  number: 8000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: menu-api-ingress
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /api/menuitems
            pathType: Prefix
            backend:
              service:
                name: menu-app
                port:
                  number: 8001
